# automl

./: .gitignore  environment.yaml  pyproject.toml
src/automl/analysis/time_series/panel_analysis/: boundary.py  correlation.py  cross_regime.py  pca.py  rolling_correlation.py  run.py  visualise.py
src/automl/analysis/time_series/seasonality_analysis/: adjustment.py  candidates.py  decision.py  run.py  step1_visual.py  step2_tests.py  step3_stability.py  visualise.py
src/automl/analysis/time_series/single_ts_analysis/: analyse.py  autocorrelation.py  descriptive.py  regime.py  run_parallel.py  (+2 more)
src/automl/feature_selection/: gate1_prior.py  gate2_quality.py  gate3_redundancy.py  gate4_ic.py  gate5_multiple.py  gate6_regime.py  gate7_decay.py  report.py  run.py  visualise.py
tests/analysis/time_series/panel_analysis/: conftest.py  test_boundary.py  test_correlation.py  test_cross_regime.py  test_pca.py  test_rolling_correlation.py  test_run.py  test_visualise.py
tests/analysis/time_series/seasonality_analysis/: conftest.py  test_adjustment.py  test_candidates.py  test_decision.py  test_run.py  test_step1_visual.py  test_step2_tests.py  test_step3_stability.py  test_visualise.py
tests/analysis/time_series/single_ts_analysis/: conftest.py  test_analyse.py  test_autocorrelation.py  test_descriptive.py  test_regime.py  test_run_parallel.py  test_stationarity.py  test_volatility.py
tests/feature_selection/: conftest.py  test_gate1.py  test_gate2.py  test_gate3.py  test_gate4.py  test_gate5.py  test_gate6.py  test_gate7.py  test_run.py  test_visualise.py
